changed headers to paragrapth

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </div>
         <div>
             <h1>Irina Anastasieva</h1>
-            <h2>Product Lead</h2>
-            <h3>Vice President</h3>
+            <p>Product Lead</p>
+            <p id="smaller_paragraph">Vice President</p>
         </div>
     </div>
 </body>
