--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
             <img src="./images/penguin1.svg" alt="Card picture">
         </div>
-        <div>
+        <div class="nameTag">
             <h1>Irina Anastasieva</h1>
             <p>Product Lead</p>
             <p id="smaller_paragraph">Vice President</p>
