--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div>
             <img src="./images/penguin1.svg" alt="Card picture">
         </div>
-        <div class="nameTag">
+        <div>
             <h1>Irina Anastasieva</h1>
             <h1>Pavitra Patil</h1>
             <p>Product Lead</p>
-            <p id="smaller_paragraph">Vice President</p>
+            <p>Vice President</p>
         </div>
     </div>
 </body>
